{
    "name": "WildWestGuns",
    "maps": [
        {
            "name": "Guns",
            "id": "28af4887-637f-424d-9e1a-604200729818",
            "actions": [
                {
                    "name": "TriggerLeft",
                    "type": "Button",
                    "id": "5f155a99-7668-4a3a-9a47-56f8c6d6a96c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpButtonLeft",
                    "type": "Button",
                    "id": "e3bc8580-40f7-45d8-b0b4-fa7d5dfd8799",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DownButtonLeft",
                    "type": "Button",
                    "id": "59f9d639-05ec-4439-8a78-a3c56f71bd48",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "53dc79a3-1e17-4ab2-8a94-86e897ec796e",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff93ea8b-bb2b-47db-b5f8-5eb12a54ab4c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d74c2e6d-a076-49a6-bbc7-1c60d86d72fa",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88c26b4c-9f30-46f0-85f2-e24870e61e70",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18c52659-de7b-411d-a484-1258d1b40716",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpButtonLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30d7cccb-f465-4bbf-a2c1-ae7e3acb3773",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownButtonLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}